--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,3 +1,3 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>readFromPDF.insertWebtoDB</td></tr>
+<tr><td>read.readFromPDF.insertPDFtoDB</td></tr>
 </table>
