--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">2,551</td><td></td><td></td></tr>
+<tr><th colspan="8">TeluguPDF</th></tr>
+<tr><td><a href="#t0">TeluguPDF</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">2,142</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">read.readFromPDF</td><td><a href="#m0">readfromweb_crime</a></td><td rowspan="1">1679727551635</td><td rowspan="1">2517</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">TeluguPDF</th></tr></tbody><tbody id="t0"><tr><th colspan="4">TeluguPDF &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">read.readFromPDF</td><td><a href="#m0">readfromweb_health</a></td><td rowspan="1">1679758014412</td><td rowspan="1">2111</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">read.readFromPDF#readfromweb_crime</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>TeluguPDF</h2><h3 id="m0">read.readFromPDF#readfromweb_health</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
