--- a/test-output/index.html
+++ b/test-output/index.html
@@ -39,8 +39,8 @@
       <div class="suite">
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
-            <a href="#" panel-name="suite-Default_suite" class="navigator-link">
-              <span class="suite-name border-passed">Default suite</span>
+            <a href="#" panel-name="suite-TeluguPDF" class="navigator-link">
+              <span class="suite-name border-passed">TeluguPDF</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -50,37 +50,37 @@
             <div class="suite-section-content">
               <ul>
                 <li>
-                  <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Administrator\AppData\Local\Temp\2\testng-eclipse--1356973556\testng-customsuite.xml</span>
+                  <a href="#" panel-name="test-xml-TeluguPDF" class="navigator-link ">
+                    <span>C:\DontDelete_D driver\New folder\TeluguPDF\TestNG10.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="testlist-Default_suite" class="navigator-link ">
+                  <a href="#" panel-name="testlist-TeluguPDF" class="navigator-link ">
                     <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="group-Default_suite" class="navigator-link ">
+                  <a href="#" panel-name="group-TeluguPDF" class="navigator-link ">
                     <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="times-Default_suite" class="navigator-link ">
+                  <a href="#" panel-name="times-TeluguPDF" class="navigator-link ">
                     <span>Times</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="reporter-Default_suite" class="navigator-link ">
+                  <a href="#" panel-name="reporter-TeluguPDF" class="navigator-link ">
                     <span>Reporter output</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="ignored-methods-Default_suite" class="navigator-link ">
+                  <a href="#" panel-name="ignored-methods-TeluguPDF" class="navigator-link ">
                     <span>Ignored methods</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="chronological-Default_suite" class="navigator-link ">
+                  <a href="#" panel-name="chronological-TeluguPDF" class="navigator-link ">
                     <span>Chronological view</span>
                   </a> <!-- navigator-link  -->
                 </li>
@@ -98,16 +98,16 @@
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
                     <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
+                      <a href="#" panel-name="suite-TeluguPDF" class="hide-methods passed suite-TeluguPDF"> (hide)</a> <!-- hide-methods passed suite-TeluguPDF -->
+                      <a href="#" panel-name="suite-TeluguPDF" class="show-methods passed suite-TeluguPDF"> (show)</a> <!-- show-methods passed suite-TeluguPDF -->
                     </span>
-                    <div class="method-list-content passed suite-Default_suite">
+                    <div class="method-list-content passed suite-TeluguPDF">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="read.readFromPDF" class="method navigator-link" hash-for-method="readfromweb_crime">readfromweb_crime</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-TeluguPDF" title="read.readFromPDF" class="method navigator-link" hash-for-method="readfromweb_health">readfromweb_health</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-Default_suite -->
+                    </div> <!-- method-list-content passed suite-TeluguPDF -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -118,8 +118,8 @@
     </div> <!-- navigator-root -->
     <div class="wrapper">
       <div class="main-panel-root">
-        <div panel-name="suite-Default_suite" class="panel Default_suite">
-          <div class="suite-Default_suite-class-passed">
+        <div panel-name="suite-TeluguPDF" class="panel TeluguPDF">
+          <div class="suite-TeluguPDF-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
               <span class="class-name">read.readFromPDF</span>
@@ -127,64 +127,64 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="readfromweb_crime">
-                  </a> <!-- readfromweb_crime -->
-                  <span class="method-name">readfromweb_crime</span>
+                  <a name="readfromweb_health">
+                  </a> <!-- readfromweb_health -->
+                  <span class="method-name">readfromweb_health</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-passed -->
-        </div> <!-- panel Default_suite -->
-        <div panel-name="test-xml-Default_suite" class="panel">
+          </div> <!-- suite-TeluguPDF-class-passed -->
+        </div> <!-- panel TeluguPDF -->
+        <div panel-name="test-xml-TeluguPDF" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Administrator\AppData\Local\Temp\2\testng-eclipse--1356973556\testng-customsuite.xml</span>
+            <span class="header-content">C:\DontDelete_D driver\New folder\TeluguPDF\TestNG10.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
+&lt;suite name=&quot;TeluguPDF&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;TeluguPDF&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;read.readFromPDF&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;readfromweb_crime&quot;/&gt;
+          &lt;include name=&quot;readfromweb_health&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- read.readFromPDF --&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Default test --&gt;
-&lt;/suite&gt; &lt;!-- Default suite --&gt;
+  &lt;/test&gt; &lt;!-- TeluguPDF --&gt;
+&lt;/suite&gt; &lt;!-- TeluguPDF --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="testlist-Default_suite" class="panel">
+        <div panel-name="testlist-TeluguPDF" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Tests for Default suite</span>
+            <span class="header-content">Tests for TeluguPDF</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Default test (1 class)</span>
+                <span class="test-name">TeluguPDF (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="group-Default_suite" class="panel">
+        <div panel-name="group-TeluguPDF" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Groups for Default suite</span>
+            <span class="header-content">Groups for TeluguPDF</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="times-Default_suite" class="panel">
+        <div panel-name="times-TeluguPDF" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Times for Default suite</span>
+            <span class="header-content">Times for TeluguPDF</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="times-div">
               <script type="text/javascript">
-suiteTableInitFunctions.push('tableData_Default_suite');
-function tableData_Default_suite() {
+suiteTableInitFunctions.push('tableData_TeluguPDF');
+function tableData_TeluguPDF() {
 var data = new google.visualization.DataTable();
 data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
@@ -192,27 +192,27 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'readfromweb_crime')
+data.setCell(0, 1, 'readfromweb_health')
 data.setCell(0, 2, 'read.readFromPDF')
-data.setCell(0, 3, 2517);
-window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
+data.setCell(0, 3, 2111);
+window.suiteTableData['TeluguPDF']= { tableData: data, tableDiv: 'times-div-TeluguPDF'}
 return data;
 }
               </script>
               <span class="suite-total-time">Total running time: 2 seconds</span>
-              <div id="times-div-Default_suite">
-              </div> <!-- times-div-Default_suite -->
+              <div id="times-div-TeluguPDF">
+              </div> <!-- times-div-TeluguPDF -->
             </div> <!-- times-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="reporter-Default_suite" class="panel">
+        <div panel-name="reporter-TeluguPDF" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Reporter output for Default suite</span>
+            <span class="header-content">Reporter output for TeluguPDF</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="ignored-methods-Default_suite" class="panel">
+        <div panel-name="ignored-methods-TeluguPDF" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">11 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
@@ -224,6 +224,8 @@ return data;
                 <br/>
                 <span class="ignored-method-name">readfromweb_business</span>
                 <br/>
+                <span class="ignored-method-name">readfromweb_crime</span>
+                <br/>
                 <span class="ignored-method-name">readfromweb_editorial</span>
                 <br/>
                 <span class="ignored-method-name">readfromweb_navya</span>
@@ -231,8 +233,6 @@ return data;
                 <span class="ignored-method-name">readfromweb_AP</span>
                 <br/>
                 <span class="ignored-method-name">insertPDFtoDB</span>
-                <br/>
-                <span class="ignored-method-name">readfromweb_health</span>
                 <br/>
                 <span class="ignored-method-name">readfromweb_politics</span>
                 <br/>
@@ -246,7 +246,7 @@ return data;
             </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="chronological-Default_suite" class="panel">
+        <div panel-name="chronological-TeluguPDF" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">Methods in chronological order</span>
           </div> <!-- main-panel-header rounded-window-top -->
@@ -254,7 +254,7 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">read.readFromPDF</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">readfromweb_crime</span>
+                <span class="method-name">readfromweb_health</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
